--- a/styles/components/Main.module.css
+++ b/styles/components/Main.module.css
@@ -17,5 +17,10 @@
   .MainStyle {
     padding: 2rem 1rem;
     margin-top: 19rem;
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    grid-gap: 1rem;
+    justify-items: center;
+    align-items: start;
   }
 }
