--- a/styles/GlobalStyles.css
+++ b/styles/GlobalStyles.css
@@ -1,11 +1,11 @@
 /* import kreditTTF from "../public/fonts/kredit/kredit.ttf"; */
 
-@font-face {
+/* @font-face {
   font-family: "kredit";
   src: url("../public/fonts/kredit.ttf");
   font-weight: 400;
   font-style: normal;
-}
+} */
 
 :root {
   --background: #e6e6e6;
