--- a/css/components/SearchItem.module.css
+++ b/css/components/SearchItem.module.css
@@ -1,6 +1,4 @@
-import styled from "styled-components";
-
-export const Item = styled.div`
+.item {
   width: 100%;
   height: 9rem;
   padding: 0.5rem;
@@ -13,12 +11,9 @@ export const Item = styled.div`
   background-color: #efefef;
   box-shadow: 2px 2px 5px 1px #dcdcdc;
   cursor: pointer;
-  @media (min-width: 750px) {
-    height: 10rem;
-  }
-`;
+}
 
-export const ImageContainer = styled.div`
+.imageContainer {
   width: 100%;
   height: 100%;
   aspect-ratio: 1 / 1;
@@ -28,13 +23,13 @@ export const ImageContainer = styled.div`
   background-color: #ffffff;
   border-radius: 0.5rem;
   overflow: hidden;
-  img {
-    width: 100%;
-    object-fit: contain;
-  }
-`;
+}
+.imageContainer img {
+  width: 100%;
+  object-fit: contain;
+}
 
-export const IconContainer = styled.div`
+.iconContainer {
   width: 7rem;
   height: 7rem;
   aspect-ratio: 1 / 1;
@@ -44,9 +39,9 @@ export const IconContainer = styled.div`
   background-color: #ffffff;
   border-radius: 0.5rem;
   overflow: hidden;
-`;
+}
 
-export const ItemInfo = styled.div`
+.itemInfo {
   width: 100%;
   height: 100%;
   display: grid;
@@ -55,9 +50,9 @@ export const ItemInfo = styled.div`
   grid-gap: 1rem;
   justify-items: center;
   align-items: start;
-`;
+}
 
-export const ItemText = styled.p`
+.itemText {
   grid-column: 1 / span 2;
   grid-row: 1 / span 1;
   width: 100%;
@@ -70,16 +65,34 @@ export const ItemText = styled.p`
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
-`;
+}
 
-export const ItemPrice = styled(ItemText)`
+.itemPrice {
   grid-column: 1 / span 1;
   grid-row: 2 / span 1;
+  width: 100%;
+  margin: 0.2rem 0;
   font-size: 1.6rem;
   font-weight: 500;
-`;
-export const ItemCategory = styled(ItemText)`
+  text-align: left;
+  text-transform: capitalize;
+  color: var(--text);
+}
+
+.itemCategory {
   grid-column: 2 / span 1;
   grid-row: 2 / span 1;
+  width: 100%;
+  margin: 0.2rem 0;
   font-size: 1.2rem;
-`;
+  font-weight: 500;
+  text-align: left;
+  text-transform: capitalize;
+  color: var(--text);
+}
+
+@media (min-width: 750px) {
+  .item {
+    height: 10rem;
+  }
+}
