--- a/css/components/RelatedItem.module.css
+++ b/css/components/RelatedItem.module.css
@@ -1,6 +1,4 @@
-import styled from "styled-components";
-
-export const Item = styled.div`
+.item {
   width: 100%;
   padding: 0.5rem;
   display: grid;
@@ -12,12 +10,13 @@ export const Item = styled.div`
   background-color: #efefef;
   box-shadow: 2px 2px 5px 1px #dcdcdc;
   transition: 0.3s ease-in-out all;
-  &:hover {
-    box-shadow: 0.5rem 0.5rem 1rem 0.1rem #979797;
-  }
-`;
+}
 
-export const ItemLink = styled.a`
+.item:hover {
+  box-shadow: 0.5rem 0.5rem 1rem 0.1rem #979797;
+}
+
+.itemLink {
   width: 100%;
   height: 100%;
   display: grid;
@@ -25,12 +24,9 @@ export const ItemLink = styled.a`
   grid-template-rows: 3fr 1fr;
   grid-gap: 0.5rem;
   cursor: pointer;
-  @media (min-width: 1400px) {
-    grid-template-rows: 5fr 1fr;
-  }
-`;
+}
 
-export const ImageContainer = styled.div`
+.imageContainer {
   width: 100%;
   height: 100%;
   display: flex;
@@ -41,18 +37,18 @@ export const ImageContainer = styled.div`
   border-radius: 0.5rem;
   position: relative;
   overflow: hidden;
-`;
+}
 
-export const ItemInfo = styled.div`
+.itemInfo {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-`;
+}
 
-export const ItemText = styled.p`
+.itemTitle {
   width: 100%;
   font-size: 1.4rem;
   text-align: left;
@@ -62,22 +58,35 @@ export const ItemText = styled.p`
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
-`;
+}
 
-export const CategoryAndIconContainer = styled.div`
+.itemPrice {
+  width: 100%;
+  margin-top: 0.4rem;
+  font-size: 1.6rem;
+  text-align: left;
+  font-weight: 500;
+  text-transform: capitalize;
+  color: var(--blue);
+}
+
+.lastSection {
   width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-`;
+}
 
-export const ItemPrice = styled(ItemText)`
-  font-size: 1.6rem;
+.categorie {
+  width: 100%;
+  font-size: 0.9rem;
   font-weight: 500;
-  margin-top: 0.4rem;
-`;
+  text-align: left;
+  text-transform: capitalize;
+  color: var(--blue);
+}
 
-export const IconContainer = styled.button`
+.iconContainer {
   width: 1.6rem;
   height: 1.6rem;
   margin-left: auto;
@@ -89,35 +98,30 @@ export const IconContainer = styled.button`
   outline: none;
   cursor: pointer;
   transition: 0.3s ease-in-out all;
-  &:hover {
-    opacity: 1;
-    transform: rotate(-10deg);
-  }
-  @media (min-width: 750px) {
+}
+
+.iconContainer:hover {
+  opacity: 1;
+  transform: rotate(-10deg);
+}
+
+@media (min-width: 750px) {
+  .iconContainer {
     width: 1.8rem;
     height: 1.8rem;
   }
-  @media (min-width: 1000px) {
+}
+
+@media (min-width: 1000px) {
+  .iconContainer {
     opacity: 0.6;
-    width: 1.8rem;
-    height: 1.8rem;
     margin: 0.5rem;
     margin-left: auto;
   }
-`;
+}
 
-export const Categoryes = styled.div`
-  width: 90%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-`;
-
-export const Categorie = styled(ItemText)`
-  font-size: 0.9rem;
-  font-weight: 500;
-  &:nth-child(2) {
-    margin-top: 0.5rem;
+@media (min-width: 1400px) {
+  .itemLink {
+    grid-template-rows: 5fr 1fr;
   }
-`;
+}
