--- a/css/components/FavoritesItem.module.css
+++ b/css/components/FavoritesItem.module.css
@@ -5,11 +5,11 @@
   grid-template-columns: 1fr;
   grid-template-rows: 9fr 1fr;
   grid-gap: 0.5rem;
-  justify-items: center;
-  align-items: center;
-  background-color: #efefef;
-  box-shadow: 2px 2px 5px 1px #dcdcdc;
-  transition: 0.3s ease-in-out all;
+  place-items: center;
+  -webkit-box-align: center;
+  background-color: rgb(239, 239, 239);
+  box-shadow: rgb(220 220 220) 2px 2px 5px 1px;
+  transition: all 0.3s ease-in-out 0s;
 }
 
 .item:hover {
@@ -30,9 +30,11 @@
   width: 100%;
   height: 100%;
   display: flex;
+  -webkit-box-pack: center;
   justify-content: center;
+  -webkit-box-align: center;
   align-items: center;
-  background-color: #ffffff;
+  background-color: rgb(255, 255, 255);
   aspect-ratio: 1 / 1;
   border-radius: 0.5rem;
   position: relative;
